# global-proficiency-framework

./: .gitignore  README.md  environment.yml  pyproject.toml
.dvc/: config
data/: .gitignore  gpf-reading-processed.dvc
data/gpf-reading/: .gitignore  GPF_Reading_Tables_Final.xlsx.dvc
data/source/: .gitignore  GPF-Math-Final.pdf.dvc  GPF-Reading-Final.pdf.dvc  GPF_Math_Tables_Final.xlsx.dvc
gpf/: gpf_item.py  grade_defs.py  item_generation.py  utils.py
gpf/gpf_data/: read-appendix-c.csv  read-skills.csv  reading-appendix-b-grade-info.csv  reading-appendix-b-material.csv  readover_full_with_skill_code.csv
gpf/gpf_data/appendix-b-tables/: Table16.csv  Table17.csv  Table18.csv  Table19.csv  Table20.csv  Table21.csv  Table22.csv
gpf/gpf_data/appendix-b-texts/: G2-E1.md  G2-E2.md  G2-E3.md  G3-E1.md  G3-E2.md  G3-E3.md  G3-E4.md  G3-E5.md  G4-E1.md  G4-E2.md  G4-E3.md  G4-E4.md  G5-E1.md  G5-E2.md  G5-E3.md  G5-E4.md  G6-E1.md  G6-E2.md  G6-E3-table.md  G6-E3.csv  G6-E3.md  G7-E1.md  G7-E2.md  G7-E3.md  G8-E1.md  G8-E2-table.md  G8-E2.csv  G8-E2.md  G8-E3.md  G9-E1.md  G9-E2.md  G9-E3-table.md  G9-E3.csv  G9-E3.md  G9-E4.md
gpf/gpf_data/appendix-c/: redo-extract.csv  table-23-a.csv  table-24-a.csv  table-25-a.csv  table-26-a.csv  table-27-a.csv  table-27-b.csv  table-28-a.csv  table-29-a.csv  table-30-a.csv  (+44 more)
gpf/math/: item_generation.py
gpf_maths/: gpf_item.py  item_generation.py
scripts/: demo_load_data.py  demo_load_data_maths.py  make-markdown-files.py  render-table-over.R  spread-sheets-rendered.py  spread-sheets.py  story-sparsity.R  tables-1.R
(+1 files in other folders)
